# photodate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
photodate/: analyzer.py  cli.py  duplicates.py  exif.py  faces.py  gphotos.py  models.py  storage.py  validator.py  web.py
photodate/templates/: album_context.html  applied.html  base.html  dates.html  duplicates.html  global_duplicates.html  gphotos_local.html  icloud.html  icloud_review.html  index.html  organize.html  organize_done.html  organize_no_exif.html  organize_preview.html  results.html  settings.html  validate.html  verify_report.html
tests/: conftest.py  test_smoke.py
